# nostr-enhanced-relay-dashboard

./: .env.example  .gitignore  002_privacy_and_auth.sql  Cargo-nerd.toml  Cargo.toml  Dockerfile  INTEGRATION_GUIDE.md  LICENSE  NERD_v0.0.1_DESIGN.md  README.md  README_NERD_v0.0.1.md  auth_policy.rs  docker-compose-nerd.yml  docker-compose.yml  nerd.toml  relay-config.toml  relay_proxy.rs
deploy/: Caddyfile  nrr-config.toml
migrations/: 0001_initial.sql  0002_seed_default_relays.sql
public/: index.html
src/: app_state.rs  config.rs  db.rs  main.rs  routes.rs
src/db/: mod.rs  relay_ledger.rs  relay_rules.rs
src/relay/: bridge.rs  manager.rs  mod.rs  schema_guard.rs  status.rs  types.rs
src/routes/: relay.rs
