[package]
name = "nerd-server"
version = "0.0.1"
edition = "2021"
authors = ["cryptic-node <cryptic-node@users.noreply.github.com>"]
license = "Apache-2.0"
description = "Nostr Enhanced Relay Dashboard - Rust successor to NRD"
repository = "https://github.com/cryptic-node/nostr-enhanced-relay-dashboard"
readme = "README.md"
keywords = ["nostr", "relay", "dashboard"]
categories = ["web-programming", "database"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# Errors
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
